--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,8 @@
     "bullmq": "^5.12.10",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
+    "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
